# ghci-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ghci-derive/: Cargo.toml
ghci-derive/src/: lib.rs
ghci-macros/: Cargo.toml
ghci-macros/src/: lib.rs
src/: haskell.rs  lib.rs
tests/: derive.rs  ghci_macro.rs  ghci_roundtrip.rs
