[package]
name = "ghci"
version = "0.2.0"
repository = "https://github.com/basile-henry/ghci-rs"
authors = ["Basile Henry <bjm.henry@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Manage and communicate with ghci (Haskell's GHC interpreter)"
keywords = ["haskell", "repl", "subprocess", "ffi"]
categories = ["compilers", "development-tools"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["poll"], default-features = false }
nonblock = "0.2"
thiserror = "2"

[dev-dependencies]
version-sync = "0.9"
