[workspace]
members = [".", "ghci-derive", "ghci-macros"]

[package]
name = "ghci"
version = "0.2.1"
repository = "https://github.com/basile-henry/ghci-rs"
authors = ["Basile Henry <bjm.henry@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Manage and communicate with ghci (Haskell's GHC interpreter)"
keywords = ["haskell", "repl", "subprocess", "ffi"]
categories = ["compilers", "development-tools"]

[features]
derive = ["dep:ghci-derive"]
macros = ["dep:ghci-macros"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["poll"], default-features = false }
nonblock = "0.2"
thiserror = "2"
ghci-derive = { version = "0.2.1", path = "ghci-derive", optional = true }
ghci-macros = { version = "0.2.1", path = "ghci-macros", optional = true }

[dev-dependencies]
version-sync = "0.9"

[[test]]
name = "derive"
required-features = ["derive"]

[[test]]
name = "ghci_macro"
required-features = ["macros"]
